[package]
name = "rusty-tub"
version = "0.1.0"
edition = "2018"
resolver = "2"

[dependencies]
bollard = "0.11.0"
futures = "0.3"
tokio = { version = "1", features = ["io-util", "net", "time"] }
derive_more = "0.99"
once_cell = "1.8.0"
tracing = "0.1"

clickhouse = { version = "0.8.0", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }
tracing-subscriber = "0.2.25"